backend/k8s/nodeports.yaml
apiVersion: v1
kind: Service
metadata:
  name: toeic-backend-nodeport
  namespace: toeic-app
  labels:
    app: toeic-backend
spec:
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: toeic-backend
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: toeic-app
  labels:
    app: prometheus
spec:
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090
    protocol: TCP
  selector:
    app: prometheus
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: toeic-app
  labels:
    app: grafana
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30030
    protocol: TCP
  selector:
    app: grafana
  type: NodePort
